...
    android:orientation="horizontal"
    android:gravity="center"
    android:padding="2dp">

    <!-- Selector 1: Home -->
    <TextView
        android:id="@+id/selector_home"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:drawableTopCompat="@drawable/home_icon"
        android:contentDescription="@string/icon_description_home"
        android:gravity="center"
...
