...
    android:orientation="horizontal"
    android:gravity="center"
    android:padding="2dp">

    <!-- Selector 1: Artists -->
    <TextView
        android:id="@+id/selector_artists"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:drawableTopCompat="@drawable/music_note_icon"
        android:contentDescription="@string/icon_description_artists"
        android:gravity="center"
...
        android:contentDescription="@string/icon_description_albums"
        android:gravity="center"
        android:text="@string/label_albums" />

    <!-- Selector 3: Collectors -->
    <TextView
        android:id="@+id/selector_collectors"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:drawableTopCompat="@drawable/collector_icon"
        android:contentDescription="@string/icon_description_collectors"
        android:gravity="center"
...
