<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <!-- Variable to bind the Performer object -->
        <variable
            name="performer"
            type="com.example.vinilos_app.models.Performer" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <!-- Image of the Performer -->
        <ImageView
            android:id="@+id/image_performer"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/performer_image_description"
            app:imageUrl="@{performer.image}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/text_performer_name"
            app:layout_constraintBottom_toBottomOf="parent" />

        <!-- Name of the Performer -->
        <TextView
            android:id="@+id/text_performer_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{performer.name}"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/image_performer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/text_performer_description" />

        <!-- Description of the Performer -->
        <TextView
            android:id="@+id/text_performer_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{performer.description}"
            android:textAppearance="?attr/textAppearanceBody2"
            app:layout_constraintTop_toBottomOf="@id/text_performer_name"
            app:layout_constraintStart_toEndOf="@id/image_performer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <!-- Button for Viewing the Performer -->
        <Button
            android:id="@+id/button_ver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_button_text"
            app:layout_constraintTop_toBottomOf="@id/text_performer_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
